option('lzma',
       type : 'feature',
       value : 'auto',
       description : 'build with liblzma decoder support')

option('bzip2',
       type : 'feature',
       value : 'auto',
       description : 'build with bzip2 decoder support')

option('gtk_doc',
       type : 'boolean',
       value : false,
       description : 'use gtk-doc to build documentation')
